--- a/packages/stylesheet/component.css
+++ b/packages/stylesheet/component.css
@@ -1353,8 +1353,9 @@
 .actionSheet__header {
   box-shadow: inset 0 calc(-1 * 1px) 0 var(--seed-v3-color-stroke-neutral);
   padding-block: var(--seed-v3-dimension-s3_5);
-  flex-direction: column;
   align-items: center;
+  gap: var(--seed-v3-dimension-s1);
+  flex-direction: column;
   display: flex;
 }
 
